--- a/frontend/package.json
+++ b/frontend/package.json
@@ -121,6 +121,8 @@
 		"node": ">= 14.16.1"
 	},
 	"dependencies": {
+		"fortawesome": "^0.0.1-security",
+		"svelte-fa": "^3.0.3",
 		"svelte-use-form": "^2.0.0"
 	}
 }
