--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,9 +62,9 @@
 		"build:vercel:ssr": "cross-env ADAPTER=vercel OPTIONS='{}' SSR=true npm run build",
 		"build:vercel:verbose:ssr": "cross-env ADAPTER=vercel OPTIONS='{}' SSR=true npm run build:verbose",
 		"preview": "svelte-kit preview",
-		"preview:open": "npm run run preview --open",
-		"preview:host": "npm run run preview --host",
-		"preview:host:open": "npm run run preview --open --host",
+		"preview:open": "npm run preview --open",
+		"preview:host": "npm run preview --host",
+		"preview:host:open": "npm run preview --open --host",
 		"lint": "prettier --ignore-path .gitignore --check ./src/**/*.{js,svelte,ts} ./*.{ts,cjs,js} --plugin-search-dir=. && eslint ./src/**/*.{js,svelte,ts} --ignore-path .gitignore .eslintignore",
 		"lint:fix": "prettier --check ./src/**/*.{js,svelte,ts} ./*.{ts,cjs,js} --plugin-search-dir=. && eslint ./src/**/*.{js,svelte,ts} --ignore-path .gitignore .eslintignore",
 		"format": "prettier --ignore-path .gitignore --write ./src/**/*.{js,svelte,ts} ./*.{ts,cjs,js} --plugin-search-dir=.",
@@ -74,6 +74,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.86",
 		"@sveltejs/adapter-vercel": "1.0.0-next.26",
 		"@sveltejs/kit": "1.0.0-next.142",
 		"@tailwindcss/typography": "^0.4.1",
@@ -107,7 +108,6 @@
 		"prettier": "~2.2.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"rimraf": "^3.0.2",
-		"svelte": "^3.42.3",
 		"svelte-check": "^2.2.5",
 		"svelte-loader": "^3.1.2",
 		"svelte-preprocess": "^4.7.4",
@@ -122,8 +122,10 @@
 	},
 	"dependencies": {
 		"fortawesome": "^0.0.1-security",
+		"svelte": "^3.49.0",
 		"svelte-fa": "^3.0.3",
 		"svelte-icons": "^2.1.0",
-		"svelte-use-form": "^2.0.0"
+		"svelte-use-form": "^2.0.0",
+		"vite": "^3.0.8"
 	}
 }
