--- a/frontend/package.json
+++ b/frontend/package.json
@@ -122,6 +122,7 @@
 	},
 	"dependencies": {
 		"fortawesome": "^0.0.1-security",
+		"socket.io-client": "^4.5.1",
 		"svelte": "^3.49.0",
 		"svelte-fa": "^3.0.3",
 		"svelte-icons": "^2.1.0",
