--- a/frontend/package.json
+++ b/frontend/package.json
@@ -123,6 +123,7 @@
 	},
 	"dependencies": {
 		"fortawesome": "^0.0.1-security",
+		"socket.io-client": "^4.5.2",
 		"svelte-fa": "^3.0.3",
 		"svelte-icons": "^2.1.0",
 		"svelte-use-form": "^2.0.0",
