--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,11 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-  "jade": "~1.11.0",
+    "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "socket.io": "^4.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
